--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
 .root {
     --text-color: white;
-    /* --link-color:  */
+    --link-color: yellow;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+a {
+    /* Only for now */
+    color: purple;
+    text-decoration: none;
+}
+
+
 
 body{
     margin: 0px;
@@ -19,9 +37,12 @@ body{
     /* height: 70vh; */
 }
 
-#top-bar{
+.top-bar{
     display: flex;
     justify-content: flex-end;
+    padding: 20px 40px;
+    gap: 25px;
+    /* margin-right: 10px; */
 }
 
 .top-bar-button {
@@ -136,12 +157,14 @@ body{
 
 
 /*Beginning of login methods*/
+
 #login-background{
     height: 100%;
     background: linear-gradient(to right, rgb(124,221,254),rgb(22,28,89));
 }
 
-#login-block-container{
+
+.login-block-container{
     width: 100vw;
     height: 100vh;
     margin-left: 15%;
@@ -165,11 +188,11 @@ body{
 #login-instructions{
     /* background: red; */
     font-size: 1vw;
-    margin-top: 0px;
+    margin-top: 80px;
     line-height: 1;
 }
 
-#login-input-container{
+.login-block-container .login-input-container{
     margin-top: 0%;
 }
 
@@ -179,8 +202,9 @@ body{
 
 
 #login-input-text{
-    width: 80%;
-    height: 3vw;
+    padding: 10px;
+    width: 400px;
+    height: 40px;
     background: rgb(174, 173, 173);
     color: black;
     margin-top: 5%;
@@ -193,7 +217,7 @@ body{
 #login-button{
     margin-top: 5%;
     cursor: pointer;
-    width: 80%;
+    width: 400px;
     height: 4vw;
     background: blue;
     color: white;
@@ -202,3 +226,39 @@ body{
     margin-bottom: 2vw;
 }
 
+/* Contact */
+
+.contact {
+    padding: 0 50px;
+    margin-bottom: 100px;
+    display: flex;
+    gap: 50px;
+}
+
+
+
+.contact form{
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Can target two different groups in css */
+.contact form input, .contact form textarea {
+    font-family: Verdana, sans-serif;
+    border: 2px solid black;
+    padding: 10px;
+    margin-bottom: 15px;
+    outline: none;
+    resize: none;
+}
+
+.contact form button {
+    font-size: 16px;
+    font-family: Verdana, sans-serif;
+    color: white;
+    background-color: #00b2ff;
+    height: 50px;
+    cursor:pointer;
+    transition: 0.1;
+}
