--- a/templates/login.html
+++ b/templates/login.html
@@ -15,18 +15,18 @@
                     <a href="/">Home</a>
                 </div>
                 <div class="top-bar-button">
-                    <a href="about.html">
+                    <a href="/about">
                         <span>About</span>
 
                     </a>
                 </div>
                 <div class="top-bar-button">
-                    <a href="contact.html">
+                    <a href="/contact">
                         <span>Contact</span>
                     </a>
                 </div>
                 <div class="top-bar-button">
-                    <a href="login.html">
+                    <a href="/login">
                         <span>Login</span>
                     </a>
                 </div>
@@ -48,7 +48,7 @@
                         </div>
                         
                         <div class="login-input-box">
-                            <input id="login-input-text" type="text" placeholder="Password">
+                            <input id="login-input-text" type="password" placeholder="Password">
                         </div>
 
                         <!-- Might need to be changed to "submit" -->
