--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@ html {
 
 a {
     /* Only for now */
-    color: purple;
+    color: black;
     text-decoration: none;
 }
 
@@ -23,12 +23,9 @@ a {
 
 body{
     margin: 0px;
+    
 }
 
-#header-background{
-    background-image: url(/images/main_background.png);
-    background-size: cover;
-}
 
 .top-bar{
     display: flex;
@@ -69,6 +66,22 @@ body{
     color: white;
     font-size: 10vw;
     font-family: "Libre Franklin";
+}
+
+#background-photo-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    justify-content: center;
+}
+
+#background-photo-container img {
+    width: 100%;
+    height: auto;
+    align-content: center;
 }
 
 #mule-photo-container{
