--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,13 +11,13 @@
                 <a href="/">Home</a>
             </div>
             <div>
-                <a href="about.html">About</a>
+                <a href="/about">About</a>
             </div>
             <div>
-                <a href="contact.html">Contact</a>
+                <a href="/contact">Contact</a>
             </div>
             <div>
-                <a href="login.html">Login</a>
+                <a href="/login">Login</a>
             </div>
         </div>
 
