--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
             </div>
 
             <div class="opening-side-by-side-container">
+                <div id = "background-photo-container">
+                    <img src="{{ url_for('static', filename='images/main_background.png') }}" alt="background">
+                </div>
                 <div id="title-container">
                     <div class="title">
                         <b>MAILROOM</b>
