adding csv reader and login functionality

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ABOUT</title>
-        <h1>THIS IS THE ABOUT PAGE</h1>
+        <title>About</title>
+        <link rel="stylesheet" href="../static/style.css">
     </head>
+
+    <body>
+        <div class="top-bar">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <div>
+                <a href="/about">About</a>
+            </div>
+            <div>
+                <a href="/contact">Contact</a>
+            </div>
+            <div>
+                <a href="/login">Login</a>
+            </div>
+        </div>
+
+        <div class="about">
+            This is the about page.
+        </div>
+
+    </body>
 </html>
