--- a/templates/logout.html
+++ b/templates/logout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login</title>
+        <title>Logout</title>
         <link rel="stylesheet" href="../static/style.css">
     </head>
 
@@ -37,33 +37,18 @@
             <div class="login-block-container">
                 <div id="login-block">
                     <div id="login-title">
-                        <h1>Login</h1>
+                        <h1>Logout</h1>
                     </div>
-
                     <div id="login-instructions">
-                        <h1>Sign in to your account</h1>
+                        <h1>Click Here to Logout</h1>
                     </div>
-
                     <div class="login-input-container">
                         <form method="POST">
-                            <input type="text" placeholder="email" name="email">
-                            <input type="password" placeholder="password" name="password">
-                            <input type="submit" value="Login">
+                            <input type="submit" value="Logout">
                         </form>
-
-                        <div id="login-input-container">
-                            Forgot your password? 
-                            <a href="reset.html" target="_blank">Click here to reset.</a>
-                        </div>
-                        
                     </div>
-
                 </div>
             </div>
-
-
-
-
         </div>
     </body>
 </html>
