--- a/static/style.css
+++ b/static/style.css
@@ -196,6 +196,7 @@ body{
     font-size: 1vw;
     margin-top: 80px;
     line-height: 1;
+    padding: 15px;
 }
 
 .login-block-container .login-input-container{
