--- a/templates/login.html
+++ b/templates/login.html
@@ -46,8 +46,12 @@
 
                     <div class="login-input-container">
                         <form method="POST">
-                            <input type="text" placeholder="email" name="email">
-                            <input type="password" placeholder="password" name="password">
+                            <div>
+                                <input type="text" placeholder="email" name="email">
+                            </div>
+                            <div>
+                                <input type="password" placeholder="password" name="password"> 
+                            </div>
                             <input type="submit" value="Login">
                         </form>
 
