--- a/templates/admin.html
+++ b/templates/admin.html
@@ -59,7 +59,7 @@
         
                 <div class="box-side-by-side-container">
                     <div class="box-photo-container">
-                        <img src="{{ url_for('static', filename='images/mule.png') }}" alt="Wrong file path">
+                        <img src="{{ url_for('static', filename='images/USPS_box.png') }}" alt="Wrong file path">
                     </div>
                     <form method="POST">
                         <input type="number" placeholder="Enter # boxes to + or -" name="quantity">
