--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,8 @@ html {
 
 a {
     /* Only for now */
-    color: black;
+    color: white;
+    font-family: "Libre Franklin";
     text-decoration: none;
 }
 
@@ -186,9 +187,10 @@ body{
 
 #login-title{
     color: blue;
-    padding-top: 6%;
+    padding-top: 7%;
     font-size: 3vw;
     line-height: 0;
+    font-family: 'Libre Franklin', sans-serif;
 }
 
 #login-instructions{
@@ -197,6 +199,7 @@ body{
     margin-top: 80px;
     line-height: 1;
     padding: 15px;
+    font-family: 'Libre Franklin', sans-serif;
 }
 
 .login-block-container .login-input-container{
@@ -208,7 +211,7 @@ body{
 }
 
 
-#login-input-text{
+.login-input-text{
     padding: 10px;
     width: 400px;
     height: 40px;
@@ -217,11 +220,50 @@ body{
     margin-top: 5%;
 }
 
-#login-input-text::placeholder{
+.login-input-text::placeholder{
     color: black
 }
 
-#login-button{
+.password-container{
+    position: relative;
+    width: 100%;
+    max-width: 400px; 
+    margin: 0 auto; 
+}
+
+.password-input-text{
+    width: 100%;
+    height: 40px;
+    background: rgb(174, 173, 173);
+    color: black;
+    margin-top: 5%;
+    padding: 10px;
+}
+
+.password-input-text::placeholder{
+    color: black
+}
+
+
+#show-password{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-5%);
+    right: 1rem;
+    cursor: pointer;
+    background: transparent;
+    border: none;
+    width: 1.5rem;
+    display: flex;
+    align-items: center;
+}
+
+#show-password img {
+    width: 100%;
+    height: auto;
+}
+
+.submit_button{
     margin-top: 5%;
     cursor: pointer;
     width: 400px;
@@ -233,6 +275,12 @@ body{
     margin-bottom: 2vw;
 }
 
+.underline{
+    text-decoration: underline;
+    color: blue;
+    font-weight: bold;
+}
+
 /* Contact */
 
 .contact {
@@ -242,7 +290,10 @@ body{
     gap: 50px;
 }
 
-
+#contact-background{
+    background: linear-gradient(to right, rgb(124,221,254),rgb(22,28,89));
+    height: 100vh;
+}
 
 .contact form{
     flex: 3;
