--- a/templates/logout.html
+++ b/templates/logout.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="login-input-container">
                         <form method="POST">
-                            <input type="submit" value="Logout">
+                            <input type="submit" class = "login-input-text" value="Logout">
                         </form>
                     </div>
                 </div>
