removed extra htmls, fixed images, implemented count updater

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,7 +18,11 @@
                     <a href="/contact">Contact</a>
                 </div>
                 <div>
+                    {% if admin == True %}
+                    <a href="/logout">Logout</a>
+                    {% else %}
                     <a href="/login">Login</a>
+                    {% endif %}
                 </div>
             </div>
 
