--- a/templates/index.html
+++ b/templates/index.html
@@ -22,13 +22,17 @@
                     <a href="/contact">Contact</a>
                 </div>
                 <div>
+                    {% if admin == True %}
+                    <a href="/logout">Logout</a>
+                    {% else %}
                     <a href="/login">Login</a>
+                    {% endif %}
                 </div>
             </div>
 
             <div class="opening-side-by-side-container">
                 <div id = "background-photo-container">
-                    <img src="{{ url_for('static', filename='images/main_background.png') }}" alt="background">
+                    <img src="/static/images/main_background.png" alt="Wrong file path">
                 </div>
                 <div id="title-container">
                     <div class="title">
@@ -42,7 +46,7 @@
                     </div>
                 </div>
                 <div id="mule-photo-container">
-                    <img src="{{ url_for('static', filename='images/mule.png') }}" alt="Wrong file path">
+                    <img src="/static/images/mule.png" alt="Wrong file path">
                 </div>
             </div>
 
@@ -60,8 +64,14 @@
         
                 <div class="box-side-by-side-container">
                     <div class="box-photo-container">
-                        <img src="{{ url_for('static', filename='images/mule.png') }}" alt="Wrong file path">
+                        <img src="/static/images/{{  box.image }}" alt="Wrong file path">
                     </div>
+                    {% if admin == True %}
+                    <form method = "POST", action="{{ url_for('main.update', box_id=box.id) }}">
+                        <input type="number" placeholder="Enter # boxes to + or -" name="quantity">
+                        <input type="submit" value="Submit">
+                    </form>
+                    {% endif %}
                     <div class="box-info-container">
                         Name: {{ box.name }}<br>
                         Quantity: {{ box.quantity }}<br>
