--- a/static/style.css
+++ b/static/style.css
@@ -269,3 +269,15 @@ body{
     cursor:pointer;
     transition: 0.1;
 }
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background-color: #f1f1f1;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    font-size: 14px;
+    color: #555;
+}
