--- a/static/style.css
+++ b/static/style.css
@@ -212,10 +212,11 @@ body{
 
 .login-input-text{
     padding: 10px;
-    width: 400px;
+    width: 100%;
     height: 40px;
     background: rgb(174, 173, 173);
     color: black;
+    max-width: 400px;
     margin-top: 5%;
 }
 
@@ -265,7 +266,8 @@ body{
 .submit_button{
     margin-top: 5%;
     cursor: pointer;
-    width: 400px;
+    width: 100%;
+    max-width:400px;
     height: 4vw;
     background: blue;
     color: white;
