--- a/static/style.css
+++ b/static/style.css
@@ -27,7 +27,8 @@ a {
 
 body{
     margin: 0px;
-    
+    padding-bottom: 40px;
+    box-sizing: border-box;
 }
 
 
@@ -212,10 +213,11 @@ body{
 
 .login-input-text{
     padding: 10px;
-    width: 400px;
+    width: 100%;
     height: 40px;
     background: rgb(174, 173, 173);
     color: black;
+    max-width: 400px;
     margin-top: 5%;
 }
 
@@ -265,7 +267,8 @@ body{
 .submit_button{
     margin-top: 5%;
     cursor: pointer;
-    width: 400px;
+    width: 100%;
+    max-width:400px;
     height: 4vw;
     background: blue;
     color: white;
