--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,8 @@
                         <form method = "POST", action = "{{ url_for('main.add_box')}}", enctype = "multipart/form-data">
                             <input type = "text" placeholder = "Name" name = "name" required>
                             <input type = "text" placeholder = "Size" name = "size" required>
-                            <input type = "text" placeholder = "Link" name = "link" required></br>
+                            <input type = "text" placeholder = "Link" name = "link" required>
+                            <input type = "number" placeholder = "Low Stock #" name = "low_stock" required></br>
 
                             <div class="form-row">
                                 <label for="image">Image:</label>
