--- a/static/style.css
+++ b/static/style.css
@@ -253,7 +253,19 @@ body{
     width: 80vw;
     font-size: 1.2rem;
     margin-bottom: 16px;
-    background-color: yellow;
+    background-color: rgb(247, 247, 141);
+    color: black;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+  }
+
+  .alert-error {
+    padding: 12px;
+    margin-top: 20px;
+    border-radius: 3px;
+    width: 80vw;
+    font-size: 1.2rem;
+    margin-bottom: 16px;
+    background-color: rgb(247, 247, 141);
     color: black;
     font-family:Georgia, 'Times New Roman', Times, serif;
   }
