Hiding API Key in .env

--- a/templates/about.html
+++ b/templates/about.html
@@ -66,4 +66,7 @@
         </div>
 
     </body>
+    <footer>
+        <p>&copy; <span id="year"></span> HashMap OverFlow. All rights reserved.</p>
+    </footer>
 </html>
