--- a/templates/index.html
+++ b/templates/index.html
@@ -157,4 +157,9 @@
             </ul>
         </div>
     </body>
+
+    <footer>
+        <p>&copy; <span id="year"></span> HashMap OverFlow. All rights reserved.</p>
+    </footer>
+    
 </html>
