--- a/templates/login.html
+++ b/templates/login.html
@@ -91,4 +91,8 @@
             }
         </script>
     </body>
+
+    <footer>
+        <p>&copy; <span id="year"></span> HashMap OverFlow. All rights reserved.</p>
+    </footer>
 </html>
