--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,10 @@
                 </div>
                 <div>
                     {% if admin == True %}
-                    <a href="/logout">Logout</a>
+                    <!-- <a href="/logout">Logout</a> -->
+                    <form action="{{ url_for('auth.logout') }}" method="POST">
+                        <button type="submit" class="text-button">Logout</button>
+                    </form>
                     {% else %}
                     <a href="/login">Login</a>
                     {% endif %}
